[UNIREG-2390] Corrigé un bug qui faisait que les tiers restants n'étaient pas indexés (ni passés dirty) lorsque l'indexation d'un tiers sautait au milieu d'un batch.
git-svn-id: https://svn.etat-de-vaud.ch/SVN_SOCLE/registre/unireg/trunk@46002 cb3efa0a-b8b0-9f43-a4c8-343d8b7e4362